<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Glyndex</string>
    <string name="app_name_2">Glyndex - Glycemic Index</string>
    <string name="title_activity_details">Details</string>

    <string name="measurement_name_example">Handful, with closed hand (20g)</string>
    <string name="measurement_ch_example">2.0 R (20g)</string>
    <string name="details_measurement_table_title">Common measurements</string>
    <string name="details_measurement_table_header_quantity">Amount</string>
    <string name="details_measurement_table_header_ch">Carbohydrates</string>
    <string name="category_title">Category</string>
    <string name="ig_title">GI: </string>
    <string name="chrations_title">HC Ration (10g)</string>
    <string name="details_1chrations_example">200g</string>
    <string name="ig_example">20</string>
    <string name="category_example">Vegetables and greens</string>
    <string name="product_name_example">Cooked chickpeas</string>
    <plurals name="ch_ration_quantity">
        <item quantity="one">%1d serving (%2d g CH)</item>
        <item quantity="other">%1d rations (%2d g)</item>
    </plurals>

    <string name="ch_ration">%1$s R (%2$s g)</string>
    <string name="menu_category">Categories</string>
    <string name="searchView_hint">Search in all categories</string>

    <!-- About screen-->
    <string name="about_title">About Glyndex</string>
    <string name="current_version">@string/app_version</string>
    <string name="about_current_version">@string/app_version</string>
    <string name="info_source_link"><u>www.fundaciondiabetes.org</u></string>

    <string name="about_info_icons">Icons:</string>
    <string name="about_info_icons_1">Baianat - www.flaticon.com</string>
    <string name="about_info_icons_2">Freepik - www.flaticon.com</string>

    <string name="about_glyndex_menu_item">About Glyndex</string>
    <string name="about_info_support">Contact</string>


    <!-- Info screen-->
    <string name="info_screen_title">Glycemic Index</string>
    <string name="info_ig_1">At a nutritional level, the glycemic index (GI) is one more characteristic of each of the foods that we include in our diet. It is a simple measure to understand how quickly the carbohydrates we eat (sugars) are transformed into glucose in the blood. It is an important concept, as pointed out by the Fundación para la Diabetes (FD), because this index can make some foods recommended in certain circumstances and be inadvisable in others.</string>
    <string name="info_ig_2">Remember that one of the macronutrients that food contains is carbohydrates (sugars), which can be rapidly absorbed (simple carbohydrates) or somewhat slower (compound carbohydrates). That amount of sugar and how quickly our body absorbs it is the glycemic index. In an imaginary table, the maximum GI would have a value of 100 and would correspond to glucose itself, that is, sugar. Then we have three segments in which the different foods can be included according to their composition:</string>
    <string name="info_ig_3">High GI: 70 or more</string>
    <string name="info_ig_4">Medium or moderate GI: 55 - 69</string>
    <string name="info_ig_5">Low GI: 54 or less</string>

    <string name="info_source_main"><![CDATA[Source: <a href="\&quot;https://www.fundaciondiabetes.org\&quot;"><b>Fundación para la Diabetes Novo Nordisk</b></a> (in Spanish)]]></string>
    <string name="info_source_gi_links"><![CDATA[Read more about IG <a href="\&quot;https://www.fundaciondiabetes.org/general/articulo/47/el-indice-glucemico-de-los-alimentos\&quot;"><b>here</b></a> and <a href="\&quot;https://www.fundaciondiabetes.org/general/noticia/14444/que-es-el-indice-glucemico-de-los-alimentos\&quot;"><b>here</b></a> (in Spanish).]]></string>
    <string name="info_source_digital"><![CDATA[<a href="\&quot;https://www.fundaciondiabetes.org/sabercomer/tabla_de_raciones_de_hidratos_de_carbono\&quot;"><b>See</b></a> food table on the web (in Spanish).]]></string>
    <string name="info_source_pdf"><![CDATA[<a href="\&quot;https://www.fundaciondiabetes.org/upload/hidratos_carbono_textos/1/tablas_hidratos2.pdf\&quot;"><b>Download</b></a> food table in PDF (in Spanish).]]></string>

    <string name="info_gi_subtitle_1">What is the Glycemic Index?</string>
    <string name="info_gi_subtitle_2">Which is the glycemic index of the food we eat?</string>
    <string name="info_gi_references_title">Sources:</string>
    <string name="info_source_main_about">Data source:</string>
    <string name="info_ig_6">Unknown IG: -</string>
    <string name="indice_gluc_menu_item">Glycemic Index</string>

    <string name="info_about_support_contact">bearm.codes@gmail.com</string>
    <string name="development">Development</string>
    <string name="support">Support</string>
    <string name="cat_icon_content_description">Category Icon</string>
    <string name="ig_icon_content_description">Food glycemic index icon</string>
    <string name="resources">Resources</string>
    <string name="close_dialog_button">Accept</string>
    <string name="search_title">Search</string>
    <string name="dash_symbol">-</string>
    <string name="grams">%1$s g</string>
    <string name="search_button_content_description">Food searcher</string>
    <string name="info_close_btn">Start</string>
    <string name="info_onboarding_title">Before getting started…</string>
    <string name="btn_add_new_measurement">Add new measurement…</string>
    <string name="measurementNameField">Name</string>
    <string name="measurement_quantity_field">Grams of Carbohydrates</string>
    <string name="add_measurement_dialog_title">Add new measurement</string>
    <string name="cancel">Cancel</string>
    <string name="error_empty_name">This field cannot be empty.</string>
    <string name="save">Save</string>
    <string name="add_measurement_dialog_message">Enter the data of the new measurement:</string>
    <string name="not_valid_field_error">Invalid value</string>
    <string name="toast_measurement_removed">Measurement deleted</string>
    <string name="add_food_dialog_title">Add new food item</string>
    <string name="add_food_dialog_message">Enter the data of the new food item:</string>
    <string name="food_chgrams_field">Quantity (g) with 10g of HC</string>
    <string name="food_gi_field">Glycemic Index</string>
    <string name="unknown">Unknown</string>
    <string name="add_menu_item">add_menu_food</string>
    <string name="edit_menu_item">Edit</string>
    <string name="delete_menu_item">Delete</string>
    <string name="new_functionality_23">What\'s New</string>

    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="whats_new_message_23">Now you can also add new food items! You will find a new add button (+) for each category.</string>
    <string name="title_food_form_title">My food items</string>
    <string name="title_food_search_title">Food search</string>
    <string name="food_form_save_error">This food item already exists in this category.</string>
    <string name="food_deleted_success_message">The food item was deleted successfully</string>
    <string name="food_form_save_success_message">The food item was saved successfully.</string>
    <string name="edit_food_dialog_title">Edit food item</string>
    <string name="delete_message_dialog">Are you sure you want to delete this food item?</string>
    <string name="delete_title_dialog">Confirm delete</string>
    <string name="not_valid_field_zero_error">The value needs to be higher than 0</string>
    <string name="food_form_save_unknown_error">Something went wrong. Please, try again.</string>
    <string name="food_custom_icon">Icon that indicates that que food item is custom and was created or edited by the user.</string>
    <string name="about_this_app">Glyndex was created to help you quickly find information about different foods, like their glycemic index.</string>
    <string name="the_app_about_title">The app</string>
</resources>