<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_app_about_title"
            style="@style/myAboutTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/GIInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_this_app" />


            <TextView
                android:id="@+id/tv_app_version"
                style="@style/GIInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/about_current_version"/> />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_info_support"
            style="@style/myAboutTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="6dp">

            <TextView
                style="@style/GIInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_about_support_contact"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resources"
            style="@style/myAboutTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/gi_source"
                style="@style/GIInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_source_main_about"
                />

            <TextView
                android:id="@+id/gi_source_link"
                style="@style/myAboutInfoLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_source_link" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/GIInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_info_icons" />

            <TextView
                style="@style/myAboutInfoLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_info_icons_1" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>