<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/food_form_title_add"
                style="@style/DetailsMainTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/add_food_dialog_title"
                android:textAllCaps="false"
                tools:text="@string/add_food_dialog_title" />

            <TextView
                android:id="@+id/dialog_message_add"
                style="@style/GIInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/add_food_dialog_message"
                android:visibility="gone"
                tools:text="@string/add_food_dialog_message" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_event_name"
                style="@style/myFormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/measurementNameField"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_food_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_notes"
                    android:drawablePadding="@dimen/drawablePadding_form_icons"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_event_quantity"
                style="@style/myFormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/food_chgrams_field"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_food_chgrams"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_calculate"
                    android:drawablePadding="@dimen/drawablePadding_form_icons"
                    android:inputType="numberDecimal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_event_gi"
                    style="@style/myFormEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="@string/food_gi_field"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_food_gi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_gi"
                        android:drawablePadding="@dimen/drawablePadding_form_icons"
                        android:inputType="number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkbox_unknown_gi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checkMark="@style/TextAppearance.AppCompat.Large"
                    android:checked="true"
                    android:text="@string/unknown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    style="@style/mySecondaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    tools:text="@string/cancel" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    style="@style/myPrimaryButton"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save"
                    tools:text="@string/save" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>