<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorAppBackground"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_title"
        style="@style/DetailsInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:backgroundTint="@color/colorItemBackground">

            <TextView
                android:id="@+id/tv_food_name"
                style="@style/DetailsMainTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name_example" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:backgroundTint="@color/colorItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <TextView
                            style="@style/DetailsTitles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category_title" />

                        <TextView
                            android:id="@+id/tv_category_name"
                            style="@style/DetailsInfo"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            tools:text="@string/category_example" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <TextView
                            style="@style/DetailsTitles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chrations_title" />

                        <TextView
                            android:id="@+id/tv_carbs_g"
                            style="@style/DetailsInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="false"
                            tools:text="@string/details_1chrations_example" />

                    </LinearLayout>
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ll_ig_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="2dp"
                    android:paddingEnd="4dp">

                    <com.txusballesteros.widgets.FitChart
                        android:id="@+id/fc_gi_chart"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        app:backStrokeColor="@color/colorGray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.421"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeSize="12dp"
                        app:valueStrokeColor="@color/colorGreen" />

                    <TextView
                        android:id="@+id/tv_ig"
                        style="@style/DetailsInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/fc_gi_chart"
                        app:layout_constraintEnd_toEndOf="@+id/fc_gi_chart"
                        app:layout_constraintStart_toStartOf="@+id/fc_gi_chart"
                        app:layout_constraintTop_toTopOf="@+id/fc_gi_chart"
                        tools:text="@string/ig_example" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_measr_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="12dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/MeasurementTableTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_measurement_table_title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/measurement_column"
                            style="@style/MeasurementListHeader"
                            android:layout_height="wrap_content"
                            android:text="@string/details_measurement_table_header_quantity" />

                        <TextView
                            android:id="@+id/carbs_column"
                            style="@style/MeasurementListHeader"
                            android:layout_height="wrap_content"
                            android:text="@string/details_measurement_table_header_ch" />

                    </LinearLayout>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>